feat[putra]: big update for create product api
docs[putra]: update create endpoint for product api
